--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       height: 100vh;
-      background: url('https://raw.githubusercontent.com/nahayo/demo/main/giphy.gif') no-repeat center center fixed;
+      background: url('https://i.pinimg.com/originals/f7/9e/9e/f79e9ed494ed804c08832a797c5de5fa.gif') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       color: white;
@@ -41,35 +41,4 @@
     .btn-discord {
       background-color: #5865f2;
       color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: background-color 0.3s;
-      display: inline-block;
-    }
-
-    .btn-discord:hover {
-      background-color: #4752c4;
-    }
-
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #dcdcdc;
-    }
-  </style>
-</head>
-<body>
-  <div class="content">
-    <h1>Rejoins le serveur de Dark !</h1>
-    <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
-    <a href="https://discord.gg/QFSPavF8" target="_blank" class="btn-discord">➡️ Rejoindre le serveur</a>
-    <footer>
-      <p>&copy; 2025 Dark | Site créé pour promouvoir mon serveur Discord</p>
-    </footer>
-  </div>
-</body>
-</html>
+      padding: 15px
