--- a/index.html
+++ b/index.html
@@ -19,26 +19,48 @@
       flex-direction: column;
     }
 
-    .content {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 40px 30px;
-      border-radius: 12px;
-      max-width: 600px;
-      width: 90%;
-      box-sizing: border-box;
-    }
-
     h1 {
       font-size: 48px;
       margin-bottom: 15px;
+      text-shadow: 2px 2px 4px #000;
     }
 
     p {
       font-size: 20px;
       margin-bottom: 25px;
+      text-shadow: 1px 1px 3px #000;
     }
 
     .btn-discord {
       background-color: #5865f2;
       color: white;
-      padding: 15px
+      padding: 15px 30px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+
+    .btn-discord:hover {
+      background-color: #4752c4;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #dcdcdc;
+      text-shadow: 1px 1px 2px #000;
+    }
+  </style>
+</head>
+<body>
+  <h1>Rejoins le serveur de Dark !</h1>
+  <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
+  <a href="https://discord.gg/QFSPavF8" target="_blank" class="btn-discord">➡️ Rejoindre le serveur</a>
+  <footer>
+    <p>&copy; 2025 Dark | Site créé pour promouvoir mon serveur Discord</p>
+  </footer>
+</body>
+</html>
