--- a/index.html
+++ b/index.html
@@ -3,64 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <title>Serveur Discord de Dark</title>
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
+    /* Reset & base */
+    body, html {
+      margin: 0; padding: 0;
+      height: 100%;
+      font-family: 'Poppins', sans-serif;
+      color: white;
       background: url('https://i.pinimg.com/originals/f7/9e/9e/f79e9ed494ed804c08832a797c5de5fa.gif') no-repeat center center fixed;
       background-size: cover;
-      font-family: Arial, sans-serif;
-      color: white;
+      overflow-x: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
+      position: relative;
       flex-direction: column;
     }
 
+    /* Overlay dégradé pour lisibilité */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: linear-gradient(180deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.4) 60%, rgba(0,0,0,0.7) 100%);
+      z-index: 0;
+    }
+
+    /* Contenu au-dessus */
+    .content {
+      position: relative;
+      z-index: 1;
+      max-width: 600px;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
     h1 {
-      font-size: 48px;
+      font-weight: 600;
+      font-size: 3rem;
       margin-bottom: 15px;
-      text-shadow: 2px 2px 4px #000;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+      animation: fadeInDown 1s ease forwards;
     }
 
     p {
-      font-size: 20px;
-      margin-bottom: 25px;
-      text-shadow: 1px 1px 3px #000;
+      font-weight: 400;
+      font-size: 1.25rem;
+      margin-bottom: 30px;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
+      animation: fadeInUp 1.2s ease forwards;
     }
 
     .btn-discord {
       background-color: #5865f2;
       color: white;
-      padding: 15px 30px;
-      font-size: 18px;
+      padding: 15px 35px;
+      font-size: 1.2rem;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
       text-decoration: none;
-      transition: background-color 0.3s;
+      box-shadow: 0 5px 15px rgba(88, 101, 242, 0.5);
+      transition: background-color 0.3s, transform 0.3s;
+      display: inline-block;
+      animation: fadeIn 1.5s ease forwards;
     }
 
     .btn-discord:hover {
       background-color: #4752c4;
+      transform: scale(1.05);
+      box-shadow: 0 7px 20px rgba(71, 82, 196, 0.7);
     }
 
     footer {
       margin-top: 40px;
-      font-size: 14px;
+      font-size: 0.9rem;
       color: #dcdcdc;
-      text-shadow: 1px 1px 2px #000;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
+      animation: fadeIn 1.8s ease forwards;
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Animations */
+    @keyframes fadeInDown {
+      0% {opacity: 0; transform: translateY(-20px);}
+      100% {opacity: 1; transform: translateY(0);}
+    }
+
+    @keyframes fadeInUp {
+      0% {opacity: 0; transform: translateY(20px);}
+      100% {opacity: 1; transform: translateY(0);}
+    }
+
+    @keyframes fadeIn {
+      0% {opacity: 0;}
+      100% {opacity: 1;}
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      .btn-discord {
+        font-size: 1rem;
+        padding: 12px 25px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Rejoins le serveur de Dark !</h1>
-  <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
-  <a href="https://discord.gg/QFSPavF8" target="_blank" class="btn-discord">➡️ Rejoindre le serveur</a>
-  <footer>
-    <p>&copy; 2025 Dark | Site créé pour promouvoir mon serveur Discord</p>
-  </footer>
+  <div class="content">
+    <h1>Rejoins le serveur de Dark !</h1>
+    <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
+    <a href="https://discord.gg/QFSPavF8" target="_blank" class="btn-discord">➡️ Rejoindre le serveur</a>
+    <footer>
+      <p>&copy; 2025 Dark | Site créé pour promouvoir mon serveur Discord</p>
+    </footer>
+  </div>
 </body>
 </html>
