--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <title>Serveur Discord de Dark</title>
+  
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  
+  <!-- Favicon -->
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" />
+  
   <style>
-    /* Style général */
+    /* Reset & base */
     body, html {
       margin: 0; padding: 0;
       height: 100%;
@@ -14,127 +20,70 @@
       background: url('https://i.pinimg.com/originals/f7/9e/9e/f79e9ed494ed804c08832a797c5de5fa.gif') no-repeat center center fixed;
       background-size: cover;
       overflow-x: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
       position: relative;
+      flex-direction: column;
     }
-    /* Superposition sombre pour lisibilité */
+
+    /* Overlay dégradé pour lisibilité */
     body::before {
       content: "";
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.65);
+      background: linear-gradient(180deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.4) 60%, rgba(0,0,0,0.7) 100%);
       z-index: 0;
     }
 
-    .container {
+    /* Contenu au-dessus */
+    .content {
       position: relative;
       z-index: 1;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-      text-align: center;
+      max-width: 600px;
+      padding: 20px;
+      box-sizing: border-box;
     }
 
     h1 {
-      font-weight: 700;
+      font-weight: 600;
       font-size: 3rem;
       margin-bottom: 15px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.9);
-    }
-
-    h2 {
-      font-weight: 600;
-      font-size: 2rem;
-      margin-top: 40px;
-      margin-bottom: 15px;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.8);
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+      animation: fadeInDown 1s ease forwards;
     }
 
     p {
-      font-size: 1.15rem;
-      line-height: 1.6;
-      max-width: 700px;
-      margin: 0 auto 25px auto;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
+      font-weight: 400;
+      font-size: 1.25rem;
+      margin-bottom: 30px;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
+      animation: fadeInUp 1.2s ease forwards;
     }
 
     .btn-discord {
       background-color: #5865f2;
       color: white;
-      padding: 15px 40px;
-      font-size: 1.3rem;
+      padding: 15px 35px;
+      font-size: 1.2rem;
       border: none;
       border-radius: 12px;
       cursor: pointer;
       text-decoration: none;
-      display: inline-block;
-      box-shadow: 0 5px 15px rgba(88, 101, 242, 0.6);
+      box-shadow: 0 5px 15px rgba(88, 101, 242, 0.5);
       transition: background-color 0.3s, transform 0.3s;
-      margin-top: 20px;
-      user-select: none;
+      display: inline-block;
+      animation: fadeIn 1.5s ease forwards;
     }
+
     .btn-discord:hover {
       background-color: #4752c4;
       transform: scale(1.05);
+      box-shadow: 0 7px 20px rgba(71, 82, 196, 0.7);
     }
 
-    footer {
-      margin-top: 60px;
-      color: #dcdcdc;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-      font-size: 0.9rem;
-    }
-
-    .social-links {
-      margin-bottom: 15px;
-    }
-    .social-links a {
-      margin: 0 15px;
+    /* Logo Discord */
+    .discord-logo-link {
       display: inline-block;
-      transition: transform 0.3s;
-      filter: drop-shadow(0 0 2px #5865f2);
-    }
-    .social-links a:hover {
-      transform: scale(1.2);
-    }
-    .social-links img {
-      width: 36px;
-      height: 36px;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2.3rem;
-      }
-      h2 {
-        font-size: 1.7rem;
-      }
-      .btn-discord {
-        padding: 12px 30px;
-        font-size: 1.1rem;
-      }
-      p {
-        font-size: 1rem;
-        max-width: 90%;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Rejoins le serveur de Dark !</h1>
-    <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
-
-    <a href="https://discord.gg/QFSPavF8" class="btn-discord" target="_blank" rel="noopener" aria-label="Rejoindre le serveur Discord de Dark">
-      ➡️ Rejoindre le serveur
-    </a>
-
-    <h2>Pourquoi nous rejoindre ?</h2>
-    <p>
-      Rejoins une communauté chaleureuse où le fun, l’entraide et la passion du gaming sont au cœur de tout. Que tu sois débutant ou expert, tu trouveras ta place parmi nous !
-    </p>
-
-    <h2>Règles du serveur</h2>
-    <p>
-      - Respect et bonne humeur obligatoires<br />
-      - Pas de spam ou contenu inapproprié<br />
-      - Aide et soutien entre membres<br />
+      margin-bottom:
