--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       box-sizing: border-box;
     }
 
+    /* Container pour les deux profils côte à côte */
+    .profiles-container {
+      display: flex;
+      justify-content: center;
+      gap: 60px;
+      margin-bottom: 40px;
+      flex-wrap: wrap;
+    }
+
     /* Profil rond avec gif */
     .profile-pic {
       width: 120px;
@@ -66,13 +75,22 @@
     .name-certified {
       display: inline-flex;
       align-items: center;
-      justify-content: flex-start; /* logo à droite */
+      justify-content: center;
       gap: 8px;
       margin-bottom: 5px;
       font-weight: 600;
       font-size: 2.5rem;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
       animation: fadeInDown 1s ease forwards;
+    }
+    /* Pour le second profil, badge à droite */
+    .name-certified.sdn {
+      justify-content: center;
+      gap: 6px;
+    }
+    .name-certified.sdn span.certified-badge {
+      margin-left: 6px;
+      margin-right: 0;
     }
     .certified-badge svg {
       width: 28px;
@@ -218,28 +236,47 @@
       .certified-text {
         font-size: 0.85rem;
       }
+      .profiles-container {
+        gap: 30px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="content">
 
-    <!-- Image gif profil ronde -->
-    <div class="profile-pic">
-      <img src="https://i.pinimg.com/originals/a8/ab/95/a8ab953a947847b50c2f525c98345a0d.gif" alt="Photo de profil de Dark" />
-    </div>
+    <div class="profiles-container">
+      <!-- Bloc 1 : Dark -->
+      <div style="text-align: center;">
+        <div class="profile-pic">
+          <img src="https://i.pinimg.com/originals/a8/ab/95/a8ab953a947847b50c2f525c98345a0d.gif" alt="Photo de profil de Dark" />
+        </div>
+        <div class="name-certified" aria-label="Nom et badge certifié de Dark">
+          Dark
+          <span class="certified-badge" aria-label="Compte certifié">
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#1DA1F2" d="M9.5 16.5L5 12l1.4-1.4 3.1 3.1 6.5-6.5L16.5 8l-7 7z"/>
+            </svg>
+          </span>
+        </div>
+        <div class="certified-text">Compte certifié</div>
+      </div>
 
-    <!-- Nom Dark + badge certifié -->
-    <div class="name-certified" aria-label="Nom et badge certifié de Dark">
-      Dark
-      <span class="certified-badge" aria-label="Compte certifié">
-        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-          <path fill="#1DA1F2" d="M9.5 16.5L5 12l1.4-1.4 3.1 3.1 6.5-6.5L16.5 8l-7 7z"/>
-        </svg>
-      </span>
+      <!-- Bloc 2 : SDNcynx -->
+      <div style="text-align: center;">
+        <div class="profile-pic">
+          <img src="https://i.pinimg.com/originals/fe/5c/0a/fe5c0a3629d12f0acf4f62f402d81224.gif" alt="GIF de SDNcynx" />
+        </div>
+        <div class="name-certified sdn" aria-label="Nom et badge certifié de SDNcynx">
+          SDNcynx
+          <span class="certified-badge" aria-label="Compte certifié">
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#1DA1F2" d="M9.5 16.5L5 12l1.4-1.4 3.1 3.1 6.5-6.5L16.5 8l-7 7z"/>
+            </svg>
+          </span>
+        </div>
+      </div>
     </div>
-
-    <div class="certified-text">Compte certifié</div>
 
     <h1>Rejoins le serveur de Dark !</h1>
     <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
