--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
       margin-bottom: 30px;
     }
 
+    /* Nouveau style pour le texte sous SDNcynx */
+    .certified-text.sdn-text {
+      margin-bottom: 30px;
+    }
+
     h1 {
       font-weight: 600;
       font-size: 3rem;
@@ -272,11 +277,12 @@
           <span class="certified-badge" aria-label="Compte certifié">
             <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
               <path fill="#1DA1F2" d="M9.5 16.5L5 12l1.4-1.4 3.1 3.1 6.5-6.5L16.5 8l-7 7z"/>
-          </svg>
+            </svg>
           </span>
         </div>
-        <div class="certified-text">Compte certifié</div>
+        <div class="certified-text sdn-text">Compte certifié</div>
       </div>
+    </div>
 
     <h1>Rejoins le serveur de Dark !</h1>
     <p>Un lieu de fun, d'entraide et de gaming. Tu es le bienvenu ! 🎮💬</p>
