--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       flex-direction: column;
     }
 
-    /* Overlay dégradé pour lisibilité */
     body::before {
       content: "";
       position: fixed;
@@ -37,7 +36,6 @@
       z-index: 0;
     }
 
-    /* Contenu au-dessus */
     .content {
       position: relative;
       z-index: 1;
@@ -46,7 +44,6 @@
       box-sizing: border-box;
     }
 
-    /* Container pour les deux profils côte à côte */
     .profiles-container {
       display: flex;
       justify-content: center;
@@ -55,7 +52,6 @@
       flex-wrap: wrap;
     }
 
-    /* Profil rond avec gif */
     .profile-pic {
       width: 120px;
       height: 120px;
@@ -64,14 +60,8 @@
       margin: 0 auto 15px auto;
       box-shadow: 0 0 15px rgba(0,0,0,0.6);
     }
-    .profile-pic img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
+    .profile-pic img { width: 100%; height: 100%; object-fit: cover; }
 
-    /* Nom + badge certifié */
     .name-certified {
       display: inline-flex;
       align-items: center;
@@ -83,54 +73,19 @@
       text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
       animation: fadeInDown 1s ease forwards;
     }
-    /* Pour le second profil, badge à droite */
-    .name-certified.sdn {
-      justify-content: center;
-      gap: 6px;
-    }
-    .name-certified.sdn span.certified-badge {
-      margin-left: 6px;
-      margin-right: 0;
-    }
-    .certified-badge svg {
-      width: 28px;
-      height: 28px;
-      fill: #1DA1F2; /* Bleu Twitter */
-      filter: drop-shadow(0 0 3px #1DA1F2);
-    }
+    .name-certified.sdn { justify-content: center; gap: 6px; }
+    .name-certified.sdn span.certified-badge { margin-left: 6px; margin-right: 0; }
+    .certified-badge svg { width: 28px; height: 28px; fill: #1DA1F2; filter: drop-shadow(0 0 3px #1DA1F2); }
 
-    .certified-text {
-      font-weight: 500;
-      font-size: 1rem;
-      color: #1DA1F2;
-      text-shadow: 1px 1px 5px rgba(0,0,0,0.7);
-      animation: fadeInUp 1.2s ease forwards;
-      margin-bottom: 30px;
-    }
+    .certified-text { font-weight: 500; font-size: 1rem; color: #1DA1F2; text-shadow: 1px 1px 5px rgba(0,0,0,0.7); animation: fadeInUp 1.2s ease forwards; margin-bottom: 30px; }
 
-    /* Nouveau style pour le texte sous SDNcynx */
-    .certified-text.sdn-text {
-      margin-bottom: 30px;
-    }
+    .certified-text.sdn-text { margin-bottom: 30px; }
 
-    h1 {
-      font-weight: 600;
-      font-size: 3rem;
-      margin-bottom: 15px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-      animation: fadeInDown 1s ease forwards;
-    }
+    h1 { font-weight: 600; font-size: 3rem; margin-bottom: 15px; text-shadow: 2px 2px 8px rgba(0,0,0,0.7); animation: fadeInDown 1s ease forwards; }
 
-    p {
-      font-weight: 400;
-      font-size: 1.25rem;
-      margin-bottom: 30px;
-      text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
-      animation: fadeInUp 1.2s ease forwards;
-    }
+    p { font-weight: 400; font-size: 1.25rem; margin-bottom: 30px; text-shadow: 1px 1px 5px rgba(0,0,0,0.6); animation: fadeInUp 1.2s ease forwards; }
 
-    .btn-discord {
-      background-color: #5865f2;
+    .btn-discord, .btn-tebex {
       color: white;
       padding: 15px 35px;
       font-size: 1.2rem;
@@ -138,112 +93,37 @@
       border-radius: 12px;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 0 5px 15px rgba(88, 101, 242, 0.5);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.5);
       transition: background-color 0.3s, transform 0.3s;
       display: inline-block;
+      margin: 5px;
+      font-weight: 600;
       animation: fadeIn 1.5s ease forwards;
     }
 
-    .btn-discord:hover {
-      background-color: #4752c4;
-      transform: scale(1.05);
-      box-shadow: 0 7px 20px rgba(71, 82, 196, 0.7);
-    }
+    .btn-discord { background-color: #5865f2; }
+    .btn-discord:hover { background-color: #4752c4; transform: scale(1.05); box-shadow: 0 7px 20px rgba(71, 82, 196, 0.7); }
 
-    /* Logo Discord */
-    .discord-logo-link {
-      display: inline-block;
-      margin-bottom: 20px;
-      animation: fadeIn 1s ease forwards;
-      z-index: 1;
-    }
-    .discord-logo-link img {
-      width: 60px;
-      filter: drop-shadow(0 0 3px #5865f2);
-      transition: transform 0.3s, filter 0.3s;
-    }
-    .discord-logo-link img:hover {
-      transform: scale(1.1);
-      filter: drop-shadow(0 0 6px #4752c4);
-    }
+    .btn-tebex { background-color: #f39c12; }
+    .btn-tebex:hover { background-color: #d48806; transform: scale(1.05); box-shadow: 0 7px 20px rgba(212, 136, 6, 0.7); }
 
-    footer {
-      margin-top: 40px;
-      font-size: 0.9rem;
-      color: #dcdcdc;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
-      animation: fadeIn 1.8s ease forwards;
-      position: relative;
-      z-index: 1;
-    }
+    #copyBtn { background-color: #7289da; margin-left: 15px; padding: 15px 30px; font-size: 1.2rem; border: none; border-radius: 12px; cursor: pointer; color: white; box-shadow: 0 5px 15px rgba(114, 137, 218, 0.5); transition: background-color 0.3s, transform 0.3s; animation: fadeIn 1.6s ease forwards; }
+    #copyBtn:hover { background-color: #5b6eae; transform: scale(1.05); box-shadow: 0 7px 20px rgba(91, 110, 174, 0.7); }
 
-    /* Copier le lien bouton */
-    #copyBtn {
-      background-color: #7289da;
-      margin-left: 15px;
-      padding: 15px 30px;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      color: white;
-      box-shadow: 0 5px 15px rgba(114, 137, 218, 0.5);
-      transition: background-color 0.3s, transform 0.3s;
-      animation: fadeIn 1.6s ease forwards;
-    }
-    #copyBtn:hover {
-      background-color: #5b6eae;
-      transform: scale(1.05);
-      box-shadow: 0 7px 20px rgba(91, 110, 174, 0.7);
-    }
+    footer { margin-top: 40px; font-size: 0.9rem; color: #dcdcdc; text-shadow: 1px 1px 3px rgba(0,0,0,0.8); animation: fadeIn 1.8s ease forwards; position: relative; z-index: 1; }
 
-    /* Animations */
-    @keyframes fadeInDown {
-      0% {opacity: 0; transform: translateY(-20px);}
-      100% {opacity: 1; transform: translateY(0);}
-    }
+    @keyframes fadeInDown { 0% {opacity: 0; transform: translateY(-20px);} 100% {opacity: 1; transform: translateY(0);} }
+    @keyframes fadeInUp { 0% {opacity: 0; transform: translateY(20px);} 100% {opacity: 1; transform: translateY(0);} }
+    @keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
 
-    @keyframes fadeInUp {
-      0% {opacity: 0; transform: translateY(20px);}
-      100% {opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes fadeIn {
-      0% {opacity: 0;}
-      100% {opacity: 1;}
-    }
-
-    /* Responsive */
     @media (max-width: 480px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
-
-      .btn-discord, #copyBtn {
-        font-size: 1rem;
-        padding: 12px 25px;
-        margin-left: 0;
-        margin-top: 10px;
-        display: block;
-        width: 80%;
-      }
-      .name-certified {
-        font-size: 1.8rem;
-      }
-      .certified-badge svg {
-        width: 20px;
-        height: 20px;
-      }
-      .certified-text {
-        font-size: 0.85rem;
-      }
-      .profiles-container {
-        gap: 30px;
-      }
+      h1 { font-size: 2rem; }
+      p { font-size: 1rem; }
+      .btn-discord, .btn-tebex, #copyBtn { font-size: 1rem; padding: 12px 25px; display: block; width: 80%; margin: 10px auto; }
+      .name-certified { font-size: 1.8rem; }
+      .certified-badge svg { width: 20px; height: 20px; }
+      .certified-text { font-size: 0.85rem; }
+      .profiles-container { gap: 30px; }
     }
   </style>
 </head>
@@ -289,6 +169,11 @@
     
     <a href="https://discord.gg/QFSPavF8" target="_blank" class="btn-discord" aria-label="Rejoindre le serveur Discord">
       ➡️ Rejoindre le serveur
+    </a>
+
+    <!-- Nouveau bouton Tebex -->
+    <a href="https://soundpack.tebex.io/" target="_blank" class="btn-tebex" aria-label="Boutique Tebex">
+      💰 Tebex
     </a>
     
     <button id="copyBtn" aria-label="Copier le lien du serveur Discord">📋 Copier le lien</button>
